--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,15 @@
     background-repeat: no-repeat;
   }
 
+  .masthead2 {
+    height: 110vh;
+    min-height: 500px;
+    background-image: url('https://source.unsplash.com/BtbjCFUvBXs/1920x1080');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
   .pheader {
     background-image: url('https://source.unsplash.com/BtbjCFUvBXs/1920x1080');
     background-size: cover;
